# lunel

./: README.md
app/: app.json  package-lock.json  package.json
app/app/: _layout.tsx  feedback.tsx  help.tsx  lunel-connect.tsx  onboarding.tsx
app/app/(auth)/: auth.tsx
app/app/settings/: ai.tsx  app.tsx  bottom-bar.tsx  brainrot.tsx  editor.tsx  index.tsx  language.tsx  storage.tsx
app/app/settings/appearance/: theme.tsx
app/app/settings/appearance/fonts/: code.tsx  display.tsx  index.tsx  normal.tsx
app/app/workspace/: index.tsx
app/components/: DrawerContent.tsx  Footer.tsx  InfoSheet.tsx  NotConnected.tsx  PluginBottomBar.tsx  PluginRenderer.tsx  ThemeSwitcher.tsx
app/lib/i18n/: index.ts
app/lib/i18n/locales/: de.json  en.json  es-MX.json  es.json  fi.json  fr.json  id.json  it.json  ja.json  ko.json  ms.json  nl.json  pl.json  pt.json  ru.json  sv.json  tr.json  tw.json  uk.json  vi.json  zh.json
app/plugins/core/ai/: Panel.tsx  ToolCall.tsx
app/plugins/core/browser/: Panel.tsx
app/plugins/core/browser/devsole/: ConsoleSection.tsx  NetworkSection.tsx  (+3 more)
app/plugins/core/editor/: Panel.tsx
app/plugins/core/terminal/: Panel.tsx
app/plugins/extra/brainrot/: Panel.tsx
app/plugins/extra/explorer/: Panel.tsx
app/plugins/extra/git/: Panel.tsx
app/plugins/extra/http/: Panel.tsx
app/plugins/extra/monitor/: Panel.tsx
app/plugins/extra/ports/: Panel.tsx
app/plugins/extra/processes/: Panel.tsx
app/plugins/extra/tools/: Panel.tsx
cli/src/: index.ts
cli/src/ai/: codex.ts
pty/: Cargo.toml  README.md  build.rs
pty/.cargo/: config.toml
