[package]
name = "lunel-pty"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "lunel-pty"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
wezterm-term = { git = "https://github.com/sohzm/wezterm" }
wezterm-surface = { git = "https://github.com/sohzm/wezterm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true

[target.aarch64-apple-ios]
rustflags = [
  "-C", "link-arg=-framework",
  "-C", "link-arg=UIKit",
  "-C", "link-arg=-framework",
  "-C", "link-arg=CoreGraphics",
]

[target.aarch64-apple-ios-sim]
rustflags = [
  "-C", "link-arg=-framework",
  "-C", "link-arg=UIKit",
  "-C", "link-arg=-framework",
  "-C", "link-arg=CoreGraphics",
]
